# snipify

./: .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  schema.sql
.github/workflows/: deploy.yml
app/: app.py  config.py  logging.py  smtp_client.py  utils.py
app/api/: rate_limit.py
app/api/routers/: pages.py  redirect.py  security.py
app/models/: cache.py  database.py  redis.py  requests.py
app/static/css/: app.css  input.css
app/templates/: base.html  dashboard.html  error.html  index.html  login.html  password_reset.html  register.html  reset_password.html
app/templates/emails/: account_deactivated.html  confirmation.html  password_reset.html
app/templates/legal/: _base.html  cookie_policy.html  privacy_policy.html  terms.html
deploy/: README.md  snipify.service
