[project]
name = "url-shortener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "loguru>=0.7.3",
    "pre-commit>=4.6.0",
    "python-decouple>=3.8",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.47.0",
]
